@@ -1,10 +1,11 @@
-# $Id: Changes,v 1.20 2003/07/01 17:20:11 petdance Exp $
+# $Id: Changes,v 1.21 2003/07/03 03:04:31 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.52
 	[ENHANCEMENTS]
 	* mech-forms now handles local files.
 	* Added t/mech-forms.t to test the app
+	* Added some parm-checking to submit_form()
 
 0.51	June 29, 2003
 	[ENHANCEMENTS]
